Continued styling the website, made a mock book

--- a/index.html
+++ b/index.html
@@ -16,14 +16,21 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="headerTitle">Library</h1>
+            <h1 id="headerTitle">Library</h1>
             <button id="addBook" class="headerButtons">ADD BOOK</button>
         </div>
         <div class="library">
-
+            <div class="book">
+                <p class="bookTitle">"Cool Book"</p>
+                <p class="author">Amazing Author</p>
+                <p class="pages">200 pages</p>
+                <button class="bookButton read">Read</button>
+                <button class="bookButton remove">Remove</button>
+            </div>
         </div>
         <div class="footer">
-
+            <p class="footerText">Created by <a href="https://github.com/itsalexi">Alexi</a></p>
+            <p class="footerText">Built for <a href="https://theodinproject.com">The Odin Project</a> ❤️</p>
         </div>
     </div>
 </body>
