--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <p class="footerText">Built for <a href="https://theodinproject.com">The Odin Project</a> ❤️</p>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
