added removeBook, findButton, readBook

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <div class="container">
         <div class="header">
             <h1 id="headerTitle">Library</h1>
-            <button id="addBook" class="headerButtons">ADD BOOK</button>
+            <button class="headerButtons addBook">ADD BOOK</button>
         </div>
         <div class="library">
-            <div class="book">
+            <!-- <div class="book" data-index="0">
                 <p class="bookTitle">"Cool Book"</p>
                 <p class="author">Amazing Author</p>
                 <p class="pages">200 pages</p>
                 <button class="bookButton read">Read</button>
                 <button class="bookButton remove">Remove</button>
-            </div>
+            </div> -->
         </div>
         <div class="footer">
             <p class="footerText">Created by <a href="https://github.com/itsalexi">Alexi</a></p>
